fix contrast issue

--- a/FormAkademisk/styles/head.less
+++ b/FormAkademisk/styles/head.less
@@ -123,6 +123,7 @@
             }
             a {
                 color: @primary-nav-fg;
+                color:black;
             }
 
         } 
